--- a/jetson-zoo.rc
+++ b/jetson-zoo.rc
@@ -30,8 +30,8 @@ use_shadow = OFF
 use_colors = ON
 
 # Screen color
-screen_color = (WHITE,GREEN,ON)
-#screen_color = (CYAN,BLUE,ON)
+screen_color = (BLACK,GREEN,ON)
+#screen_color = (WHITE,GREEN,ON)
 
 # Shadow color
 shadow_color = (BLACK,BLACK,ON)
